# opencl_tests

./: CMakeLists.txt  HelloOpenCL  cpp_opencl.cpp  cpp_opencl.ll  detect_svm.cpp  get_platforms.c
.cache/clangd/index/: get_platforms.cc.6034778660BCD3BC.idx  svm_memops.cc.F51BDC9C9DA70D67.idx  vec_add_buffer.cc.7B423331693DA528.idx  vec_add_svm.cc.B5FE0940BC756A3B.idx
opencl_cmake/: CMakeLists.txt
src/: CMakeLists.txt  get_info.cc  get_platforms.cc  hello_world.bc  hello_world.cl  hello_world.spv  hello_world_dis.spv  inject_spirv.cc  iota_kernel.cl  svm_memops.cc  vec_add_svm.cc  zero_copy_buffer.cc
vector_addition_buffer/: CMakeLists.txt  vec_add.cpp
vector_addition_svm/: CMakeLists.txt
